--- a/Docker/dockerfile/ubuntu/postgres-nest/.env
+++ b/Docker/dockerfile/ubuntu/postgres-nest/.env
@@ -7,7 +7,11 @@ WWW_PORT=82
 
 URL_GITHUB=https://github.com/morgadodesarrollador/ApiIncidenciasNest.git
 REPO_GITHUB=ApiIncidenciasNest
-DBIN_NAME=IncidenciasNest
-DBIN_USER=jose
-DBIN_PASSWORD=pswIncidenciasNest
-DBIN_PORT=5435
+DB_HOST=194.61.28.54
+DB_NAME=IncidenciasNest
+DB_USERNAME=jose
+DB_PASSWORD=pswIncidenciasNest
+DB_PORT=5435
+PORT=3000
+HOST_API=http://localhost:3000/api
+JWT_SECRET=MIclaveSecreta"
