--- a/Docker/docker-compose/ubuntu/.env
+++ b/Docker/docker-compose/ubuntu/.env
@@ -6,8 +6,10 @@ TZ=Europe/Madrid
 A_PORT=80
 NNN_PORT=81
 PN_PORT=82
+PNNN_PORT=83
 
-URL_GITHUB=https://github.com/JMViiUDEZz/EntradasATuAlcance-Backend.git
+# URL_GITHUB=https://github.com/JMViiUDEZz/EntradasATuAlcance-Backend.git
+URL_GITHUB=https://github.com/JMViiUDEZz/Proyecto-EntradasATuAlcance.git
 REPO_GITHUB=EntradasATuAlcance
 DB_HOST=194.61.28.54
 DB_NAME=EntradasATuAlcance
