--- a/Docker/docker-compose/ubuntu/.env
+++ b/Docker/docker-compose/ubuntu/.env
@@ -6,7 +6,7 @@ TZ=Europe/Madrid
 A_PORT=80
 NNN_PORT=81
 PN_PORT=82
-PNNN_PORT=83
+NN_PORT=83
 
 # URL_GITHUB=https://github.com/JMViiUDEZz/EntradasATuAlcance-Backend.git
 URL_GITHUB=https://github.com/JMViiUDEZz/Proyecto-EntradasATuAlcance.git
