--- a/Docker/dockerfile/ubuntu/node-nginx/nginx.conf
+++ b/Docker/dockerfile/ubuntu/node-nginx/nginx.conf
@@ -1,14 +1,14 @@
 server {
-        server_name  entradasatualcance.com;
+        server_name  app;
 
         listen 80;
         listen [::]:80;
 
-        root /var/www/html/entradasatualcance.com/;
+        root /usr/share/nginx/html/app/build;
         index index.html index.htm index.nginx-debian.html;
 
-        access_log   /var/log/nginx/entradasatualcance.com/access.log;
-        error_log    /var/log/nginx/entradasatualcance.com/error.log;
+        access_log   /usr/share/nginx/html/app/access.log;
+        error_log    /usr/share/nginx/html/app/error.log;
 
         location / {
                 proxy_pass http://nodejs:81;
