--- a/Docker/dockerfile/ubuntu/node-nginx/nginx.conf
+++ b/Docker/dockerfile/ubuntu/node-nginx/nginx.conf
@@ -4,11 +4,11 @@ server {
         listen 80;
         listen [::]:80;
 
-        root /usr/share/nginx/html/app/build;
+        root /var/www/html/app/build;
         index index.html index.htm index.nginx-debian.html;
 
-        access_log   /usr/share/nginx/html/app/access.log;
-        error_log    /usr/share/nginx/html/app/error.log;
+        access_log   /var/www/html/app/access.log;
+        error_log    /var/www/html/app/error.log;
 
         location / {
                 proxy_pass http://nodejs:81;
